--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-gunicorn==19.9.0
-itsdangerous==1.1.0
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-matplotlib>=1.4.3
 absl-py==0.9.0
 alabaster==0.7.12
 anaconda-client==1.7.2
@@ -108,6 +103,7 @@ locket==0.2.0
 lxml==4.5.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
+matplotlib==3.2.2
 mccabe==0.6.1
 menuinst==1.4.16
 mistune==0.8.4
