--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+gunicorn==19.9.0
+matplotlib>=1.4.3
 absl-py==0.9.0
 alabaster==0.7.12
 anaconda-navigator==1.9.12
@@ -6,7 +8,6 @@ argh==0.26.2
 asn1crypto==1.3.0
 astor==0.8.0
 astroid==2.3.3
-astropy==4.0
 atomicwrites==1.3.0
 attrs==19.3.0
 autopep8==1.4.4
@@ -102,7 +103,6 @@ locket==0.2.0
 lxml==4.5.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
-matplotlib==3.2.2
 mccabe==0.6.1
 menuinst==1.4.16
 mistune==0.8.4
