--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ chardet==3.0.4
 Click==7.0
 cloudpickle==1.3.0
 clyent==1.2.2
-colorama==0.4.3
+colorama
 comtypes==1.1.7
 conda==4.8.3
 conda-build==3.18.11
