--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ cloudpickle==1.3.0
 clyent
 colorama
 comtypes==1.1.7
-conda==4.8.3
+conda
+
 conda-build==3.18.11
 conda-package-handling==1.6.0
 conda-verify==3.4.2
