--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ bleach==3.1.0
 bokeh==1.4.0
 boto==2.49.0
 Bottleneck==1.3.2
-certifi==2019.11.28
+certifi
 cffi==1.14.0
 chardet==3.0.4
 Click==7.0
@@ -32,7 +32,6 @@ clyent
 colorama
 comtypes==1.1.7
 conda
-
 conda-build==3.18.11
 conda-package-handling==1.6.0
 conda-verify==3.4.2
