--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ clyent
 colorama
 comtypes==1.1.7
 conda
-conda-build==3.18.11
+conda-build
 conda-package-handling==1.6.0
 conda-verify==3.4.2
 confuse==1.3.0
