--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alabaster==0.7.12
 anaconda-client
-anaconda-navigator
+anaconda-navigator==1.9.12
 anaconda-project
 appdirs==1.4.4
 asn1crypto==1.0.1
