--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alabaster==0.7.12
-anaconda-client
+anaconda-client==1.7.2
 anaconda-navigator==1.9.12
-anaconda-project
+anaconda-project==0.8.3
 appdirs==1.4.4
 asn1crypto==1.0.1
 astroid==2.3.1
@@ -30,10 +30,10 @@ cloudpickle==1.2.2
 clyent==1.2.2
 colorama==0.4.1
 comtypes==1.1.7
-conda
-conda-build
-conda-package-handling
-conda-verify
+conda==4.8.3
+conda-build==3.18.9
+conda-package-handling==1.6.0
+conda-verify==3.4.2
 confuse==1.3.0
 contextlib2==0.6.0
 cryptography==2.7
@@ -103,7 +103,7 @@ mccabe==0.6.1
 menuinst==1.4.16
 missingno==0.4.2
 mistune==0.8.4
-mkl-fft
+mkl-fft==1.0.14
 mkl-random==1.1.0
 mkl-service==2.3.0
 mock==3.0.5
