--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,20 @@
-argon2-cffi
-attrs==19.3.0
-backcall==0.2.0
-bleach==3.1.5
 certifi==2020.6.20
-cffi==1.14.0
 click==7.1.2
-colorama==0.4.3
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
 Flask==1.1.2
-importlib-metadata
-ipykernel
-ipython
-ipython-genutils==0.2.0
+gunicorn==20.0.4
 itsdangerous==1.1.0
-jedi
 Jinja2==2.11.2
-jsonschema
-jupyter-client
-jupyter-core==4.6.3
-MarkupSafe
-mistune
-nbconvert
-nbformat==5.0.7
-notebook
-packaging==20.4
-pandocfilters==1.4.2
-parso==0.7.0
-pickleshare
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-pycparser
-Pygments==2.6.1
-pyparsing==2.4.7
-pyrsistent==0.16.0
+joblib==0.16.0
+MarkupSafe==1.1.1
+numpy==1.19.1
+pandas==1.1.0
 python-dateutil==2.8.1
-pywinpty==0.5.7
-pyzmq==19.0.1
-Send2Trash==1.5.0
+pytz==2020.1
+scikit-learn==0.23.1
+scipy==1.5.2
 six==1.15.0
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.4
-traitlets==4.3.3
-wcwidth
-webencodings==0.5.1
+sklearn==0.0
+threadpoolctl==2.1.0
 Werkzeug==1.0.1
 wincertstore==0.2
-zipp==3.1.0
+
